"""init schema

Revision ID: 1e18c5abbbfb
Revises: 
Create Date: 2026-01-17 05:23:20.805832

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = '1e18c5abbbfb'
down_revision: Union[str, Sequence[str], None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    # ENUM 타입 생성
    op.execute("""
        DO $$
        BEGIN
            IF NOT EXISTS (
                SELECT 1 FROM pg_type WHERE typname = 'event_status_type'
            ) THEN
                CREATE TYPE event_status_type AS ENUM (
                    'NOT_STARTED', 'IN_PROGRESS', 'PAUSED', 'FINISHED'
                );
            END IF;
        END$$;
    """)
    op.execute("""
        DO $$
        BEGIN
            IF NOT EXISTS (
                SELECT 1 FROM pg_type WHERE typname = 'proposal_status_type'
            ) THEN
                CREATE TYPE proposal_status_type AS ENUM (
                    'PENDING', 'ACCEPTED', 'REJECTED', 'DELETED'
                );
            END IF;
        END$$;
    """)
    op.execute("""
        DO $$
        BEGIN
            IF NOT EXISTS (
                SELECT 1 FROM pg_type WHERE typname = 'proposal_category_type'
            ) THEN
                CREATE TYPE proposal_category_type AS ENUM (
                    'CREATION', 'MODIFICATION', 'DELETION'
                );
            END IF;
        END$$;
    """)
    op.execute("""
        DO $$
        BEGIN
            IF NOT EXISTS (
                SELECT 1 FROM pg_type WHERE typname = 'membership_status_type'
            ) THEN
                CREATE TYPE membership_status_type AS ENUM (
                    'PENDING', 'ACCEPTED', 'REJECTED'
                );
            END IF;
        END$$;
    """)
    op.create_table('users',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('email', sa.String(), nullable=True),
    sa.Column('password_hash', sa.String(), nullable=True),
    sa.Column('is_active', sa.Boolean(), server_default='true', nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email')
    )
    op.create_table('events',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('decision_subject', sa.Text(), nullable=False),
    sa.Column('entrance_code', sa.String(length=6), nullable=False),
    sa.Column('assumption_is_auto_approved_by_votes', sa.Boolean(), server_default='true', nullable=False),
    sa.Column('criteria_is_auto_approved_by_votes', sa.Boolean(), server_default='true', nullable=False),
    sa.Column('membership_is_auto_approved', sa.Boolean(), server_default='true', nullable=False),
    sa.Column('conclusion_is_auto_approved_by_votes', sa.Boolean(), server_default='true', nullable=False),
    sa.Column('assumption_min_votes_required', sa.Integer(), nullable=True),
    sa.Column('criteria_min_votes_required', sa.Integer(), nullable=True),
    sa.Column('conclusion_approval_threshold_percent', sa.Integer(), nullable=True),
    sa.Column('event_status', postgresql.ENUM('NOT_STARTED', 'IN_PROGRESS', 'PAUSED', 'FINISHED', name='event_status_type', create_type=False), nullable=False),
    sa.Column('max_membership', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('admin_id', sa.UUID(), nullable=False),
    sa.CheckConstraint("entrance_code ~ '^[A-Z0-9]{6}$'", name='ck_events_entrance_code_format'),
    sa.CheckConstraint('(assumption_is_auto_approved_by_votes = false) OR (assumption_min_votes_required IS NOT NULL)', name='ck_events_assumption_votes_required'),
    sa.CheckConstraint('(conclusion_is_auto_approved_by_votes = false) OR (conclusion_approval_threshold_percent IS NOT NULL)', name='ck_events_conclusion_threshold_required'),
    sa.CheckConstraint('(criteria_is_auto_approved_by_votes = false) OR (criteria_min_votes_required IS NOT NULL)', name='ck_events_criteria_votes_required'),
    sa.CheckConstraint('LENGTH(entrance_code) = 6', name='ck_events_entrance_code_length'),
    sa.CheckConstraint('conclusion_approval_threshold_percent IS NULL OR (conclusion_approval_threshold_percent >= 1 AND conclusion_approval_threshold_percent <= 100)', name='ck_events_conclusion_threshold_range'),
    sa.CheckConstraint('max_membership > 0', name='ck_events_max_membership_positive'),
    sa.ForeignKeyConstraint(['admin_id'], ['users.id'], ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('entrance_code', name='uq_events_entrance_code')
    )
    op.create_index(op.f('ix_events_admin_id'), 'events', ['admin_id'], unique=False)
    op.create_table('refresh_tokens',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('token_hash', sa.String(), nullable=False),
    sa.Column('expires_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('revoked_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id', 'token_hash', name='uq_refresh_user_token_hash')
    )
    op.create_index('idx_refresh_tokens_user_id', 'refresh_tokens', ['user_id'], unique=False)
    op.create_table('user_identities',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('provider', sa.String(), nullable=False),
    sa.Column('provider_user_id', sa.String(), nullable=False),
    sa.Column('email', sa.String(), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('provider', 'provider_user_id', name='uq_provider_provider_user_id')
    )
    op.create_index('idx_user_identities_user_id', 'user_identities', ['user_id'], unique=False)
    op.create_table('assumptions',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('event_id', sa.UUID(), nullable=False),
    sa.Column('content', sa.Text(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('created_by', sa.UUID(), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('updated_by', sa.UUID(), nullable=True),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['event_id'], ['events.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['updated_by'], ['users.id'], ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_assumptions_event_id', 'assumptions', ['event_id'], unique=False)
    op.create_index(op.f('ix_assumptions_created_by'), 'assumptions', ['created_by'], unique=False)
    op.create_index(op.f('ix_assumptions_updated_by'), 'assumptions', ['updated_by'], unique=False)
    op.create_table('criterion',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('event_id', sa.UUID(), nullable=False),
    sa.Column('content', sa.Text(), nullable=False),
    sa.Column('conclusion', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('created_by', sa.UUID(), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('updated_by', sa.UUID(), nullable=True),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['event_id'], ['events.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['updated_by'], ['users.id'], ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_criterion_event_id', 'criterion', ['event_id'], unique=False)
    op.create_index(op.f('ix_criterion_created_by'), 'criterion', ['created_by'], unique=False)
    op.create_index(op.f('ix_criterion_updated_by'), 'criterion', ['updated_by'], unique=False)
    op.create_table('event_memberships',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('event_id', sa.UUID(), nullable=False),
    sa.Column('membership_status', postgresql.ENUM('PENDING', 'ACCEPTED', 'REJECTED', name='membership_status_type', create_type=False), server_default='PENDING', nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('joined_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['event_id'], ['events.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id', 'event_id', name='uq_event_memberships_user_event')
    )
    op.create_index('idx_event_memberships_event_id', 'event_memberships', ['event_id'], unique=False)
    op.create_index('idx_event_memberships_user_id', 'event_memberships', ['user_id'], unique=False)
    op.create_table('options',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('event_id', sa.UUID(), nullable=False),
    sa.Column('content', sa.Text(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('created_by', sa.UUID(), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['event_id'], ['events.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_options_event_id', 'options', ['event_id'], unique=False)
    op.create_index(op.f('ix_options_created_by'), 'options', ['created_by'], unique=False)
    op.create_table('assumption_proposals',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('event_id', sa.UUID(), nullable=False),
    sa.Column('assumption_id', sa.UUID(), nullable=True),
    sa.Column('proposal_status', postgresql.ENUM('PENDING', 'ACCEPTED', 'REJECTED', 'DELETED', name='proposal_status_type', create_type=False), server_default='PENDING', nullable=False),
    sa.Column('proposal_category', postgresql.ENUM('CREATION', 'MODIFICATION', 'DELETION', name='proposal_category_type', create_type=False), nullable=False),
    sa.Column('proposal_content', sa.Text(), nullable=True),
    sa.Column('reason', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('created_by', sa.UUID(), nullable=False),
    sa.Column('accepted_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('applied_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('applied_target_id', sa.UUID(), nullable=True),
    sa.CheckConstraint("(proposal_category = 'CREATION' AND assumption_id IS NULL) OR (proposal_category != 'CREATION' AND assumption_id IS NOT NULL)", name='ck_assumption_proposals_category_assumption_id'),
    sa.CheckConstraint("(proposal_category = 'DELETION' AND proposal_content IS NULL) OR (proposal_category != 'DELETION' AND proposal_content IS NOT NULL)", name='ck_assumption_proposals_category_content'),
    sa.ForeignKeyConstraint(['applied_target_id'], ['assumptions.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['assumption_id'], ['assumptions.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['event_id'], ['events.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('assumption_id', 'created_by', name='uq_assumption_proposals_assumption_user')
    )
    op.create_index('idx_assumption_proposals_assumption_id', 'assumption_proposals', ['assumption_id'], unique=False)
    op.create_index('idx_assumption_proposals_event_id', 'assumption_proposals', ['event_id'], unique=False)
    op.create_index(op.f('ix_assumption_proposals_created_by'), 'assumption_proposals', ['created_by'], unique=False)
    op.create_table('comments',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('criterion_id', sa.UUID(), nullable=False),
    sa.Column('content', sa.Text(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('created_by', sa.UUID(), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['criterion_id'], ['criterion.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_comments_criterion_id', 'comments', ['criterion_id'], unique=False)
    op.create_index(op.f('ix_comments_created_by'), 'comments', ['created_by'], unique=False)
    op.create_table('conclusion_proposals',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('criterion_id', sa.UUID(), nullable=False),
    sa.Column('proposal_status', postgresql.ENUM('PENDING', 'ACCEPTED', 'REJECTED', 'DELETED', name='proposal_status_type', create_type=False), server_default='PENDING', nullable=False),
    sa.Column('proposal_content', sa.Text(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('created_by', sa.UUID(), nullable=False),
    sa.Column('accepted_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('applied_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['criterion_id'], ['criterion.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('criterion_id', 'created_by', name='uq_conclusion_proposals_criterion_user')
    )
    op.create_index('idx_conclusion_proposals_criterion_id', 'conclusion_proposals', ['criterion_id'], unique=False)
    op.create_index(op.f('ix_conclusion_proposals_created_by'), 'conclusion_proposals', ['created_by'], unique=False)
    op.create_table('criteria_proposals',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('event_id', sa.UUID(), nullable=False),
    sa.Column('criteria_id', sa.UUID(), nullable=True),
    sa.Column('proposal_status', postgresql.ENUM('PENDING', 'ACCEPTED', 'REJECTED', 'DELETED', name='proposal_status_type', create_type=False), server_default='PENDING', nullable=False),
    sa.Column('proposal_category', postgresql.ENUM('CREATION', 'MODIFICATION', 'DELETION', name='proposal_category_type', create_type=False), nullable=False),
    sa.Column('proposal_content', sa.Text(), nullable=True),
    sa.Column('reason', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('created_by', sa.UUID(), nullable=False),
    sa.Column('accepted_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('applied_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('applied_target_id', sa.UUID(), nullable=True),
    sa.CheckConstraint("(proposal_category = 'CREATION' AND criteria_id IS NULL) OR (proposal_category != 'CREATION' AND criteria_id IS NOT NULL)", name='ck_criteria_proposals_category_criteria_id'),
    sa.CheckConstraint("(proposal_category = 'DELETION' AND proposal_content IS NULL) OR (proposal_category != 'DELETION' AND proposal_content IS NOT NULL)", name='ck_criteria_proposals_category_content'),
    sa.ForeignKeyConstraint(['applied_target_id'], ['criterion.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['criteria_id'], ['criterion.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['event_id'], ['events.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('criteria_id', 'created_by', name='uq_criteria_proposals_criteria_user')
    )
    op.create_index('idx_criteria_proposals_criteria_id', 'criteria_proposals', ['criteria_id'], unique=False)
    op.create_index('idx_criteria_proposals_event_id', 'criteria_proposals', ['event_id'], unique=False)
    op.create_index(op.f('ix_criteria_proposals_created_by'), 'criteria_proposals', ['created_by'], unique=False)
    op.create_table('criterion_priorities',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('criterion_id', sa.UUID(), nullable=False),
    sa.Column('created_by', sa.UUID(), nullable=False),
    sa.Column('priority_rank', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.CheckConstraint('priority_rank > 0', name='ck_criterion_priorities_rank_positive'),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['criterion_id'], ['criterion.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('criterion_id', 'created_by', name='uq_criterion_priorities_criterion_user')
    )
    op.create_index('idx_criterion_priorities_criterion_id', 'criterion_priorities', ['criterion_id'], unique=False)
    op.create_index(op.f('ix_criterion_priorities_created_by'), 'criterion_priorities', ['created_by'], unique=False)
    op.create_table('option_votes',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('option_id', sa.UUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('created_by', sa.UUID(), nullable=False),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['option_id'], ['options.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('option_id', 'created_by', name='uq_option_votes_option_user')
    )
    op.create_index('idx_option_votes_option_id', 'option_votes', ['option_id'], unique=False)
    op.create_index(op.f('ix_option_votes_created_by'), 'option_votes', ['created_by'], unique=False)
    op.create_table('assumption_proposal_votes',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('assumption_proposal_id', sa.UUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('created_by', sa.UUID(), nullable=False),
    sa.ForeignKeyConstraint(['assumption_proposal_id'], ['assumption_proposals.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('assumption_proposal_id', 'created_by', name='uq_assumption_proposal_votes_proposal_user')
    )
    op.create_index('idx_assumption_proposal_votes_proposal_id', 'assumption_proposal_votes', ['assumption_proposal_id'], unique=False)
    op.create_index(op.f('ix_assumption_proposal_votes_created_by'), 'assumption_proposal_votes', ['created_by'], unique=False)
    op.create_table('conclusion_proposal_votes',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('conclusion_proposal_id', sa.UUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('created_by', sa.UUID(), nullable=False),
    sa.ForeignKeyConstraint(['conclusion_proposal_id'], ['conclusion_proposals.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('conclusion_proposal_id', 'created_by', name='uq_conclusion_proposal_votes_proposal_user')
    )
    op.create_index('idx_conclusion_proposal_votes_proposal_id', 'conclusion_proposal_votes', ['conclusion_proposal_id'], unique=False)
    op.create_index(op.f('ix_conclusion_proposal_votes_created_by'), 'conclusion_proposal_votes', ['created_by'], unique=False)
    op.create_table('criterion_proposal_votes',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('criterion_proposal_id', sa.UUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('created_by', sa.UUID(), nullable=False),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['criterion_proposal_id'], ['criteria_proposals.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('criterion_proposal_id', 'created_by', name='uq_criterion_proposal_votes_proposal_user')
    )
    op.create_index('idx_criterion_proposal_votes_proposal_id', 'criterion_proposal_votes', ['criterion_proposal_id'], unique=False)
    op.create_index(op.f('ix_criterion_proposal_votes_created_by'), 'criterion_proposal_votes', ['created_by'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_criterion_proposal_votes_created_by'), table_name='criterion_proposal_votes')
    op.drop_index('idx_criterion_proposal_votes_proposal_id', table_name='criterion_proposal_votes')
    op.drop_table('criterion_proposal_votes')
    op.drop_index(op.f('ix_conclusion_proposal_votes_created_by'), table_name='conclusion_proposal_votes')
    op.drop_index('idx_conclusion_proposal_votes_proposal_id', table_name='conclusion_proposal_votes')
    op.drop_table('conclusion_proposal_votes')
    op.drop_index(op.f('ix_assumption_proposal_votes_created_by'), table_name='assumption_proposal_votes')
    op.drop_index('idx_assumption_proposal_votes_proposal_id', table_name='assumption_proposal_votes')
    op.drop_table('assumption_proposal_votes')
    op.drop_index(op.f('ix_option_votes_created_by'), table_name='option_votes')
    op.drop_index('idx_option_votes_option_id', table_name='option_votes')
    op.drop_table('option_votes')
    op.drop_index(op.f('ix_criterion_priorities_created_by'), table_name='criterion_priorities')
    op.drop_index('idx_criterion_priorities_criterion_id', table_name='criterion_priorities')
    op.drop_table('criterion_priorities')
    op.drop_index(op.f('ix_criteria_proposals_created_by'), table_name='criteria_proposals')
    op.drop_index('idx_criteria_proposals_event_id', table_name='criteria_proposals')
    op.drop_index('idx_criteria_proposals_criteria_id', table_name='criteria_proposals')
    op.drop_table('criteria_proposals')
    op.drop_index(op.f('ix_conclusion_proposals_created_by'), table_name='conclusion_proposals')
    op.drop_index('idx_conclusion_proposals_criterion_id', table_name='conclusion_proposals')
    op.drop_table('conclusion_proposals')
    op.drop_index(op.f('ix_comments_created_by'), table_name='comments')
    op.drop_index('idx_comments_criterion_id', table_name='comments')
    op.drop_table('comments')
    op.drop_index(op.f('ix_assumption_proposals_created_by'), table_name='assumption_proposals')
    op.drop_index('idx_assumption_proposals_event_id', table_name='assumption_proposals')
    op.drop_index('idx_assumption_proposals_assumption_id', table_name='assumption_proposals')
    op.drop_table('assumption_proposals')
    op.drop_index(op.f('ix_options_created_by'), table_name='options')
    op.drop_index('idx_options_event_id', table_name='options')
    op.drop_table('options')
    op.drop_index('idx_event_memberships_user_id', table_name='event_memberships')
    op.drop_index('idx_event_memberships_event_id', table_name='event_memberships')
    op.drop_table('event_memberships')
    op.drop_index(op.f('ix_criterion_updated_by'), table_name='criterion')
    op.drop_index(op.f('ix_criterion_created_by'), table_name='criterion')
    op.drop_index('idx_criterion_event_id', table_name='criterion')
    op.drop_table('criterion')
    op.drop_index(op.f('ix_assumptions_updated_by'), table_name='assumptions')
    op.drop_index(op.f('ix_assumptions_created_by'), table_name='assumptions')
    op.drop_index('idx_assumptions_event_id', table_name='assumptions')
    op.drop_table('assumptions')
    op.drop_index('idx_user_identities_user_id', table_name='user_identities')
    op.drop_table('user_identities')
    op.drop_index('idx_refresh_tokens_user_id', table_name='refresh_tokens')
    op.drop_table('refresh_tokens')
    op.drop_index(op.f('ix_events_admin_id'), table_name='events')
    op.drop_table('events')
    op.drop_table('users')
    # ENUM 타입 삭제
    op.execute("""
        DO $$
        BEGIN
            IF EXISTS (
                SELECT 1 FROM pg_type WHERE typname = 'membership_status_type'
            ) THEN
                DROP TYPE membership_status_type CASCADE;
            END IF;
        END$$;
    """)
    op.execute("""
        DO $$
        BEGIN
            IF EXISTS (
                SELECT 1 FROM pg_type WHERE typname = 'proposal_category_type'
            ) THEN
                DROP TYPE proposal_category_type CASCADE;
            END IF;
        END$$;
    """)
    op.execute("""
        DO $$
        BEGIN
            IF EXISTS (
                SELECT 1 FROM pg_type WHERE typname = 'proposal_status_type'
            ) THEN
                DROP TYPE proposal_status_type CASCADE;
            END IF;
        END$$;
    """)
    op.execute("""
        DO $$
        BEGIN
            IF EXISTS (
                SELECT 1 FROM pg_type WHERE typname = 'event_status_type'
            ) THEN
                DROP TYPE event_status_type CASCADE;
            END IF;
        END$$;
    """)
    # ### end Alembic commands ###
